# magical_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  checks  pyproject.toml  readme.md
.github/workflows/: crate_dev.yml
crate/magical-rs/: CHANGELOG.md  Cargo.toml  Makefile  readme.md
crate/magical-rs/examples/magic_custom/: Cargo.toml
crate/magical-rs/src/: lib.rs
crate/magical-rs/src/magical/: bytes_read.rs  magic.rs  magic_custom.rs  signatures.rs
crate/magical-rs/src/magical/no_std/: no_std_bytes_read.rs  no_std_match_rules.rs  nostd_magic.rs  nostd_magic_custom.rs  nostd_signature.rs
crate/magical-rs/tests/: dyn.rs  magic_custom.rs  no_std.rs  test.rs
examples/async_dyn_magic/: Cargo.toml
examples/async_dyn_magic/src/: main.rs
examples/dyn_magic/: Cargo.toml
examples/dyn_magic/src/: main.rs
examples/magic_custom/: Cargo.toml
examples/magic_custom/src/: main.rs
examples/magic_custom/src/v_2_0_0/: magic_custom_macro.rs
examples/normal_usage/: Cargo.toml
examples/normal_usage/src/: main.rs
examples/unsafe_context/: Cargo.toml
examples/unsafe_context/src/: main.rs
scripts/: Makefile  rust.sh  rust_test.sh
src/: lib.rs
src/magical/: async_dyn_magic.rs  bytes_read.rs  dyn_magic.rs  magic.rs  magic_custom.rs  match_rules.rs  signatures.rs
src/magical/ext_fn/: webp.rs
tests/: dyn.rs  magic_custom.rs  unsafe.rs
venus_core/: Cargo.toml
venus_core/src/: lib.rs
venus_core/src/mime_types/: bytes_read.rs  extension.rs  file_mime.rs  magic.rs  magic_bytes.rs  signatures.rs
venus_core/src/utils/: etc.rs  logging.rs  path.rs
venus_core/tests/: mime_type.rs  path.rs
venus_gui/: Makefile  __version__.py  main.py
venus_gui/functional/: __init__.py  dialog_show.py  open_recent.py
venus_gui/gui/: __init__.py  basic_table_view.py  file_dialog.py  main_window.py  menu_bar.py  open_file.py  open_recent.py  setup_signals.py  signals.py  tab_state.py  tab_view.py  table_model.py  table_view.py  venus_info.py
venus_gui/gui/dialog/: __init__.py  info_dialog.py
venus_gui/lib_shared/: __init__.py  venus_core.pyi
