[package]
name = "magical_rs"
description = """A zero-dependency, no_std-friendly Rust crate that detects file types with 
surgical precision by matching magic bytes at exact 
offsets — including deep-offset formats like ISO and TAR.
Built for speed, safety, and extensibility. """
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["detect_file", "no_dependency", "no_std", "magic", "rlib"]
categories = ["filesystem", "no-std"]
include = ["LICENSE", "src/**/*.rs", "CHANGELOG.md"]
authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
readme = "readme.md"
repository = "https://github.com/reim-developer/magical_rs"

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []
magical_dyn = []

[dependencies]
