[package]
name = "magical_rs"
description = """One of the best frameworks in the Rust ecosystem for 
file recognition, advanced customization, 
in every context from synchronous to asynchronous. 
Supports running in the most minimal environments. No dependencies, no limitations."""
version = "0.3.1"
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["detect-file", "no-dependency", "no-std", "magic", "rlib"]
categories = ["filesystem", "no-std", "asynchronous"]
include = ["LICENSE", "src/**/*.rs", "CHANGELOG.md"]
authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
readme = "readme.md"
repository = "https://github.com/reim-developer/magical_rs"

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []
magical_dyn = []
magical_async_dyn = []
unsafe_context = []

[dependencies]
