[package]
name = "magical_rs"
description = """Rust framework for file recognition, aiming for high extensibility and customization."""
version = "0.4.5"
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["detect-file", "no-dependency", "no-std", "magic", "rlib"]
categories = ["filesystem", "no-std", "asynchronous"]
include = ["LICENSE", "src/**/*.rs", "CHANGELOG.md"]
authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
readme = "readme.md"
repository = "https://github.com/reim-developer/magical_rs"

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []
magical_dyn = []
magical_async_dyn = []
unsafe_context = []

[dependencies]
