[package]
name = "magical_rs"
description = "Zero-dependency, no_std-friendly file type detection by magic bytes — accurate, fast, and extensible"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["detect-file", "no-dependency", "foss", "magic", "rlib"]
categories = ["filesystem"]
include = ["LICENSE", "tests", "src/**/*.rs"]
authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
readme = "readme.md"
repository = "https://github.com/reim-developer/venus"

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []
magical_dyn = []

[dependencies]
